--- a/gb/20/1/20/n11807668.md
+++ b/gb/20/1/20/n11807668.md
@@ -1,55 +1,64 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/crlhi259/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/crlhi259/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/crlhi259/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/glmaow3740/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/glmaow3740/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/glmaow3740/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/glmaow3740/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/glmaow3740/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/glmaow3740/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/glmaow3740/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/glmaow3740/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/glmaow3740/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/glmaow3740/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/glmaow3740/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/glmaow3740/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/glmaow3740/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/glmaow3740/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/glmaow3740/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/glmaow3740/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/glmaow3740/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/glmaow3740/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/glmaow3740/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/glmaow3740/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/glmaow3740/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/glmaow3740/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/glmaow3740/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>安保条约修订60周年 安倍：美日同盟维护世界和平</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年01月20日讯】（大纪元记者庄丽存台湾台北报导）周日（1月19日）为《美日安全保障条约》修订60周年，<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md">美国</a>和<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC.md">日本</a>在东京举行纪念活动。日本首相<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E5%AE%89%E5%80%8D%E6%99%8B%E4%B8%89.md">安倍晋三</a>致词时表示，美日同盟是守护世界和平的坚定支柱，在太空、网路领域也要合作。美国总统<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md">川普</a>则透过声明表示，美日两大强权之于世界至关重要，同盟关系将继续蓬勃发展。</p>
-<p><a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC.md">日本</a>放送协会（NHK）报导，为取代1951年的旧版《美日安全保障条约》，美日于1960年1月19日签署修订版本，该协议规范<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md">美国</a>有义务保护日本，允许美军在日本境内设置基地，当年是由美国总统艾森豪（Dwight David Eisenhower）与日本首相岸信介签署。</p>
-<p>《<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E7%BE%8E%E6%97%A5%E5%AE%89%E4%BF%9D%E6%9D%A1%E7%BA%A6.md">美日安保条约</a>》修订60周年之际，日本政府19日在东京都港区的外务省饭仓公馆举办纪念活动。</p>
-<p>岸信介的外孙、首相<a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E5%AE%89%E5%80%8D%E6%99%8B%E4%B8%89.md">安倍晋三</a>出席致词时说，该条约守护着亚太地区及世界的和平，同时也是保证繁荣的坚定支柱。</p>
+<p>【大纪元2020年01月20日讯】（大纪元记者庄丽存台湾台北报导）周日（1月19日）为《美日安全保障条约》修订60周年，<ahref="https://github.com/glmaow3740/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>和<ahref="https://github.com/glmaow3740/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC.md#1">日本</a>在东京举行纪念活动。日本首相<ahref="https://github.com/glmaow3740/djy/blob/master/gb/tag/%E5%AE%89%E5%80%8D%E6%99%8B%E4%B8%89.md#1">安倍晋三</a>致词时表示，美日同盟是守护世界和平的坚定支柱，在太空、网路领域也要合作。美国总统<ahref="https://github.com/glmaow3740/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>则透过声明表示，美日两大强权之于世界至关重要，同盟关系将继续蓬勃发展。</p>
+<p><ahref="https://github.com/glmaow3740/djy/blob/master/gb/tag/%E6%97%A5%E6%9C%AC.md#1">日本</a>放送协会（NHK）报导，为取代1951年的旧版《美日安全保障条约》，美日于1960年1月19日签署修订版本，该协议规范<ahref="https://github.com/glmaow3740/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>有义务保护日本，允许美军在日本境内设置基地，当年是由美国总统艾森豪（Dwight David Eisenhower）与日本首相岸信介签署。</p>
+<p>《<ahref="https://github.com/glmaow3740/djy/blob/master/gb/tag/%E7%BE%8E%E6%97%A5%E5%AE%89%E4%BF%9D%E6%9D%A1%E7%BA%A6.md#1">美日安保条约</a>》修订60周年之际，日本政府19日在东京都港区的外务省饭仓公馆举办纪念活动。</p>
+<p>岸信介的外孙、首相<ahref="https://github.com/glmaow3740/djy/blob/master/gb/tag/%E5%AE%89%E5%80%8D%E6%99%8B%E4%B8%89.md#1">安倍晋三</a>出席致词时说，该条约守护着亚太地区及世界的和平，同时也是保证繁荣的坚定支柱。</p>
 <p>安倍还说：“美日安保作为守护太空、网路空间安全与和平的支柱，我们有责任充实同盟关系。”他承诺将进一步加强和深化同盟关系，并说该协议在未来100年内都将维持下去。</p>
-<p><a href="https://github.com/crlhi259/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md">川普</a>也于一份声明中表示，在过去60年中，“我们两个强大国家之间坚如磐石的同盟关系，之于美国、日本、印太地区及整个世界的和平、安全与繁荣起着至关重要的作用。”川普还说，随着区域的安全保障环境不断变化和新挑战的出现，同盟关系必须进一步加强和深化，川普表示有信心与日本在区域共同安全合作方面有所提升，同盟关系也将继续蓬勃发展。</p>
+<p><ahref="https://github.com/glmaow3740/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>也于一份声明中表示，在过去60年中，“我们两个强大国家之间坚如磐石的同盟关系，之于美国、日本、印太地区及整个世界的和平、安全与繁荣起着至关重要的作用。”川普还说，随着区域的安全保障环境不断变化和新挑战的出现，同盟关系必须进一步加强和深化，川普表示有信心与日本在区域共同安全合作方面有所提升，同盟关系也将继续蓬勃发展。</p>
 <p>驻日美军司令施奈德（Kevin Schneider）致词时说，在区域的安全保障环境急遽变化中，美日同盟的重要性与日俱增。艾森豪的孙女玛莉（Mary Jean Eisenhower）致词表示，岸信介与艾森豪两人的心意在60年后的今天仍在传承，希望美日两国关系能进一步发展。◇</p>
 <p>责任编辑：王愉悦</p>
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/20/n11807668.htm">安保条约修订60周年 安倍：美日同盟维护世界和平</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11546889.htm">白宫或中南海？学者析台总统大选选票去向</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/23/n11206920.htm">美学者：依台湾关系法 美应帮台网路自卫</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/21/n11202754.htm">网攻纳美日安保 日媒：直指中共</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/20/n11199967.htm">美日：渐增同盟伙伴结构 网攻或构成“武装攻击”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/9/28/n10747057.htm">远不止贸易战 美中政治冲突逐一浮出水面</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/11/20/n9866915.htm">冲绳酒驾害命 驻日美军全面禁酒</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740761.htm">“轮回之说”何处来？古老中国的轮回观</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/14/n11793221.htm">【历史回眸】做梦都是灭共复国的上将陈诚</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/8/n11776367.htm">“贤”的简化汉字 暗藏什么可怕后果？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/9/n11778584.htm">【命理】天灾注死者天有定 古北京大地震幼儿见证</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/12/n11788003.htm">逆天而为痛悔迟72：1966──金顺守女逆守牛，江青文革妖言骤（下）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/20/n11807690.htm">专访前马英九发言人徐巧芯：国民党为何惨败（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11803234.htm">【热点互动】美中贸易停火期能维持多久?</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798622.htm">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11801973.htm">开豪车入故宫惹议 “露小宝”自称是红三代</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11798622.htm">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11803294.htm">将习近平名字译成不雅称呼 脸书发声明道歉</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801405.htm">浙江卫视主持收恐吓包裹 或与高以翔猝逝有关</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11805358.htm">与轧故宫红三代同名遭骂 女星高露无辜躺枪</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801168.htm">声援中学生集会 王喜以打牌为喻勉励学生</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11805546.htm">阮民安受邀为天下制裁集会献唱 突遭港警阻止</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11805803.htm">邓超忙到没空买礼物 被儿子一句话惹哭了</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11801312.htm">【武汉肺炎 | 持续更新】武汉肺炎蔓延！突然增加136病例 增1死亡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/16/n11799177.htm">醋清肠排毒解便秘！这3个时间喝更好</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/17/n11800191.htm">林黛玉一年只能睡好10天？贫血易致缺氧和失眠</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/18/n11803359.htm">牙龈红肿发炎怎么办？中医荐1种食物和3味中药</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/19/n11803964.htm">为了让丈夫戒酒 墨西哥女子在酒里加料</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/17/11/20/n9866915.md#1">冲绳酒驾害命 驻日美军全面禁酒</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/18/9/28/n10747057.md#1">远不止贸易战 美中政治冲突逐一浮出水面</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/19/4/20/n11199967.md#1">美日：渐增同盟伙伴结构 网攻或构成“武装攻击”</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/19/4/21/n11202754.md#1">网攻纳美日安保 日媒：直指中共</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/19/4/23/n11206920.md#1">美学者：依台湾关系法 美应帮台网路自卫</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/19/9/25/n11546889.md#1">白宫或中南海？学者析台总统大选选票去向</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12900618.md#1">马斯克开28亿奖金 征求除碳技术</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12900634.md#1">俄罗斯突然撤军 乌克兰总统松口气</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898259.md#1">美参院外委会 通过重磅抗共法案</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898069.md#1">美企为钱罔顾人权？参议员：须点出伪善企业</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807668.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015824.md#1" target="_blank">文武：中共篡政（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481899.md#1" target="_blank">美严审迫害者签证 震慑中共 精英支持</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/16/n12885150.md#1">【未解之谜】报恩的白牛 印度男孩五次转生</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/18/n12887969.md#1">【小宇宙传说】宇宙中最大谜题：什么是时间？</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/2/26/n12777808.md#1">《三国演义》中的高人：神卜、神医和隐士</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/20/n12891592.md#1">【未解之谜】轰动世界的巴克斯特实验</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899457.md#1">【命理】混迹绿林怎能得福寿善报？</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902785.md#1">纪念四?二五诗朗诵：《永恒的希望》</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902079.md#1">【珍言真语】何良懋：中共要斗垮香港传统秩序</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903028.md#1">【小宇宙传说】死亡是生命结束？天上有摄像机</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901519.md#1">【远见快评】特斯拉风暴揭秘：中共要这三样</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901440.md#1">【内幕】美上将回忆 房峰辉落马前的会面</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901453.md#1">沈舟：俄罗斯撤军 辽宁号再被推上前台</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898706.md#1">宁静耿直爆料：邓超曾被某制片人潜规则</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12897810.md#1">产检测出妊娠糖尿病 巴钰为胎儿戒糖管控饮食</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901477.md#1">杜汶泽脸书宣布：旗下网台永久聘用蔡玉玲</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12897846.md#1">吴慷仁开工自曝险气切 甜谢邵雨薇“是救命恩人”</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12897819.md#1">宫胁咲良谈“花路”：莫以己见评断他人的幸福</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/17/6/4/n9224895.md#1">国际汇款最划算的方式是什么？（多国适用）（更新）</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/21/n12894817.md#1">黄豆浆、黑豆浆、发芽豆浆 豆浆区别大公开</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12897713.md#1">心律不整5大危害 可致心肌梗塞？食疗和穴位改善</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898119.md#1">减缓膝盖衰老的10种方法</a></li>
+<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898717.md#1">全球第四波疫情创爆发以来最高 专家揭原因</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/glmaow3740/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/glmaow3740/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/20/n11807668.htm">安保条约修订60周年 安倍：美日同盟维护世界和平</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/glmaow3740/djy/blob/master/gb/20/1/20/n11807668.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/glmaow3740/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/glmaow3740/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/glmaow3740/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/glmaow3740/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/glmaow3740/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
