--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,6 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/25/n12903613.md#1" target="_blank">【疫情4.25】印度三天超百万确诊 美紧急援救</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/25/n12903613.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12868250-GettyImages-1287465337-1-600x400-320x200.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周日（4月25日）上午4:00，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.46亿（146,481.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 8:40 PM					</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/17/n12886940.md#1" target="_blank">历史回顾：四二五事件前 中共构陷法轮功</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/17/n12886940.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/03/b54153411fe13d75457f0837eb4bb0a0-150x120.jpg" align ="left"></a>1999年4月25日，上万法轮功学员在北京的和平请愿，被中共的宣传机器抹黑为“围攻中南海”，成为中共前党魁江泽民镇压法轮功的一大借口。亲历四二五上访的三位前中共公安系统官员证实，中共政保系统此前多年就在构陷法轮功。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 8:24 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902575.md#1" target="_blank">中共如何侵蚀美学者权利 专家用实例解析</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902575.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/05/GettyImages-479552484-150x120.jpg" align ="left"></a>美国在线杂志“The Federalist”近日刊登的一篇文章表示，中国共产党利用资金对美国的教育机构、教师和学生施加影响力。美中学术关系正在玷污美国公民在美国本土得到保障的基本权利和自由。不幸的是，这将是一种常态，直到美国机构敢于站出来澄清这种关系。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 7:27 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/19/n12889080.md#1" target="_blank">电脑速度太慢受不了？可以尝试这六招</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/19/n12889080.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/02/shutterstock_486957832-150x120.jpg" align ="left"></a>自中共病毒疫情爆发以来，全球各地大批的人在家上班，很多人至今还维持着这种工作模式，导致互联网使用率猛增。当你发现计算机速度变慢，该怎么办呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 1:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903135.md#1" target="_blank">美CDC：完全接种疫苗中逾七千人染疫88死</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903135.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12881144-1-3CountiesBackto2ndPhaset-150x120.jpg" align ="left"></a>根据卫生官员的统计，在已经完全接种COVID-19（中共病毒）的美国人中，有记录的之后感染的病例，已超过7100例。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 8:40 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903156.md#1" target="_blank">【横河观点】美国媒体人如何吃中共的嘴软</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903156.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12903162-30e50eff1cfa3c6380b1a3a8754089e3-150x120.jpg" align ="left"></a>美《国家脉动》揭美国媒体人如何吃中共的嘴短，美国限制外国政府宣传新规；气候峰会美国自废武功，给中共输送利益，美国和中共争领导毫无意义。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 8:38 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/18/n12888540.md#1" target="_blank">三女子讲述“4·25”上访前后不寻常经历</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/18/n12888540.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12899195-L1060074-150x120.jpg" align ="left"></a>1999年4月25日，北京中南海万人法轮功学员和平上访事件（简称：“4·25”）震惊了世界。再回首，围绕着“4·25”事件前前后后的一段日子，当时人在天津、北京，以及澳洲悉尼的三位女子，以自己的亲身经历，讲述了发生在那段时间的历史事实。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 6:34 AM							</td></tr>
@@ -29,6 +30,5 @@
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12900106.md#1" target="_blank">【疫情4.23】印度医院火灾致13名患者死亡</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12900106.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12900836-GettyImages-1232471893-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周五（4月23日）清晨5:00，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.44亿（144,767,231）例，死亡人数超过307万（3,072,522）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 6:21 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899797.md#1" target="_blank">涉千人计划 华裔化学家窃可口可乐机密罪成</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899797.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-2873707-150x120.jpg" align ="left"></a>美国司法部周四（4月22日）宣布，田纳西州格林维尔的联邦陪审团裁定，美籍华裔化学家游晓蓉（Dr. Xiaorong You，音译，又名Shannon You）罪证确凿，其串谋窃取商业秘密、经济间谍和电信欺诈等罪名成立。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 2:50 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899510.md#1" target="_blank">亲历者回忆：4·25上访是正义的丰碑</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899510.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12899630-804251223491667-150x120.jpg" align ="left"></a>22年过去，亲历者回忆往事，当年的情景仍历历在目。他们表示，4·25是历史的见证，法轮功学员展现和平、理性、道德和勇气，是人类正义的丰碑。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 12:40 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899492.md#1" target="_blank">孔子学院遭审查 澳外长：将废除更多涉外协议</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899492.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12899574-GettyImages-1313762206-150x120.jpg" align ="left"></a>维州与中共签署的一带一路协议被废后，澳洲外交部长佩恩（Marise Payne）警告说，未来可能会有更多违背国家利益的涉外协议被废除。目前，中共在澳洲大学里开设的至少两所孔子学院正在被审查。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 12:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/glmaow3740/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/glmaow3740/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/glmaow3740/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
